--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@material/menu": "^14.0.0",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
     "axios": "^0.27.2",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
+    "mongoose": "^6.3.2",
+    "node-fetch": "2.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
